--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 html, body{
@@ -33,4 +34,12 @@ section#telefone{
     background: url(../imagens/mobile-1976104_1280.png);
     background-size: 600px 600px;
     background-repeat: no-repeat;
+}
+
+iframe#tela{
+    position: relative;
+    top: 120px;
+    left: 180px;
+    width: 240px;
+    height: 360px;
 }
